Update json library versions (#71)